fixed mobile spacing

--- a/new-vite-app/src/App.css
+++ b/new-vite-app/src/App.css
@@ -324,9 +324,10 @@ h1{
   transition: 1s;
   border-radius: 100px;
   width: 40px;
-  height: 25px;
+  height: 26x;
   padding: 5px;
   border: none;
+
   margin-top: 20px;
   
 }
